Task/eahw 2338 allow privilege escalation (#8)
* Disable "no new privileges" flag to allow sudo running as root.

* Fix flag position

Co-authored-by: Taoufik Mohdit <taoufik.mohdit@digital.homeoffice.gov.uk>

--- a/helm/templates/deployment.yaml
+++ b/helm/templates/deployment.yaml
@@ -32,3 +32,5 @@ spec:
           ports:
             - name: http
               containerPort: 8080
+          securityContext:
+            allowPrivilegeEscalation: true
